// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Page__PageWrapper-mddda5-0 gdFbKt"
    id="Template C_01"
    rows={null}
  >
    <section
      className="Page__Region-mddda5-2 jCgDZG"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kybLIu"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kbtacK"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 izXJfP Page__PageWrapper-mddda5-0 jxgMFP"
    id="Template C_02"
    rows={null}
  >
    <section
      className="Page__Region-mddda5-2 jCgDZG"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kybLIu"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kbtacK"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
  </section>
</div>
`;
